--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
@@ -287,6 +287,7 @@
 
 .v-Notification.info {
 	color: #283033;
+	font-size: 24px;
 	background: #cacecf;
-	border: 1px solid $v-focus-color;
+	border: 1px solid black;
 }
