--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
@@ -170,6 +170,12 @@
 	}
 }
 
+.v-button-citation{
+	font-size: 13px !important;
+	border-radius: 14px !important; 
+	height: 28px !important;
+}
+
 .study-thumnails-panel{
 	padding: 2px;
 	& .v-button{
