--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
@@ -171,9 +171,15 @@
 }
 
 .v-button-citation{
-	font-size: 13px !important;
+	font-size: 18px !important;
 	border-radius: 14px !important; 
 	height: 28px !important;
+	width: 29px !important
+}
+
+.v-button-action{
+	border-radius: 13px !important; 
+	min-width: 0px !important;
 }
 
 .study-thumnails-panel{
