--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
@@ -337,6 +337,7 @@
 
 .imedig .v-calendar-event-month[class*="ejecucion"]:before {
 	color: #ffffff;
+	animation: blinking 0.8s infinite;
 }
 
 .imedig .v-calendar-event-all-day[class*="ejecucion"] {
@@ -345,7 +346,7 @@
 }
 
 .imedig .v-calendar-week-wrapper .v-calendar-event[class*="ejecucion"] {
-	color: #ffffff;
+	color: #02925d;
 }
 
 .imedig .v-calendar-week-wrapper .v-calendar-event[class*="ejecucion"] .v-calendar-event-content {
