--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
@@ -37,7 +37,7 @@
 }
 
 .bg_red{
-  background-color: #E51400;
+  background-color: #ED473B;
 }
 
 .bg_orange{
@@ -85,7 +85,7 @@
 }
 
 .color_red{
-  color: #E51400;
+  color: #ED473B;
 }
 
 .color_orange{
@@ -114,6 +114,12 @@
 
 .color_light_blue{
   color: #97D0FC;
+}
+
+.label_error{
+  color: #ED473B;
+  font-size: 14px;
+  line-height: 16px;
 }
 
 .bg_thumnails0{
