--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.css
@@ -975,7 +975,7 @@
  */
 
 .v-vaadin-version:after {
-	content: "7.7.13";
+	content: "7.7.16";
 }
 
 .v-widget {
@@ -2024,6 +2024,12 @@ div.v-layout.v-horizontal.v-widget {
 
 .imedig .v-tooltip h1, .imedig .v-tooltip h2, .imedig .v-tooltip h3, .imedig .v-tooltip h4 {
 	color: inherit;
+}
+
+.imedig .v-tooltip pre.v-tooltip-pre {
+	font: inherit;
+	white-space: pre-wrap;
+	margin: 0;
 }
 
 .imedig .v-contextmenu {
@@ -9214,6 +9220,7 @@ div.v-layout.v-horizontal.v-widget {
 
 .imedig .v-table-body {
 	border: 1px solid #303739;
+	overflow-anchor: none;
 	-webkit-user-select: text;
 	-moz-user-select: text;
 	-ms-user-select: text;
