--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
@@ -146,6 +146,9 @@
   border-right-style: solid;
   border-right-color: #303739;
   overflow: auto;
+  & .v-verticallayout{
+		margin-top: 3px;
+	}
 }
 
 .selected{
@@ -234,13 +237,19 @@
 
 .fullscreen{
 	z-index: 30;
-	font-size: 22px;
+	font-size: 20px;
 	float: right;
 	& .v-button{
 	  z-index: 30;
-	  margin: 3px;
+	  margin: 1px;
+	  padding: 5px;
+	  width: 50px;
 	  float: right;
+	  line-height:0.7;
 	  background-color: rgba(0, 0, 0, 0.2) !important;
+	}
+	& .v-button-caption{
+		font-size: 10px !important;
 	}
 	
 	& .v-button:focus:after{
