--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
@@ -146,8 +146,8 @@
   border-right-style: solid;
   border-right-color: #303739;
   overflow: auto;
-  & .v-verticallayout{
-		margin-top: 3px;
+  & .v-verticallayout-toolbox{
+		padding-top: 2px;
 	}
 }
 
