--- a/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
+++ b/imedig-cloud/src/main/resources/VAADIN/themes/imedig/styles.scss
@@ -401,3 +401,8 @@
 .v-calendar-week-wrapper .v-calendar-event[class*="old"] .v-calendar-event-content {
 	background-color: transparent;
 }
+
+.v-calendar-event-caption{
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
