--- a/imedig-cloud/.settings/org.eclipse.wst.common.component
+++ b/imedig-cloud/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="imedig-cloud">
+    <wb-module deploy-name="imedig-cloud-2.3.1">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
@@ -8,12 +8,6 @@
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module archiveName="imedig-common-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/imedig-common/imedig-common">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module archiveName="fabricjs-addon-2.1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/fabricjs-addon/fabricjs-addon">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module archiveName="fullscreen-addon-1.0.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/fullscreen-addon/fullscreen-addon">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="context-root" value="imedig-cloud"/>
